--- a/cvo-style.css
+++ b/cvo-style.css
@@ -134,7 +134,7 @@ cursor:default;
  left: 350px;
  top: 0px;
 
- background: url("C:/Users/Asus/Pictures/me2.jpg")
+ background: url("https://drive.google.com/file/d/1leNXAR3s6JMKU2LhzoOsfec7sKkfrnaJ/view?usp=sharing")
 }
 
 .logo {
