--- a/cvo-style.css
+++ b/cvo-style.css
@@ -1,3 +1,7 @@
+/*Created By: Dadi Rahmat
+Created Date: 7-11-2020
+Inspirational theme: Viacheslav Olianishyn @web.Inspirations*/
+
 body {
  background: #e5e5e5;
 }
@@ -134,7 +138,7 @@ cursor:default;
  left: 350px;
  top: 0px;
 
- background: url("https://drive.google.com/file/d/1leNXAR3s6JMKU2LhzoOsfec7sKkfrnaJ/view")
+ background: url("https://drive.google.com/uc?export=view&id=1leNXAR3s6JMKU2LhzoOsfec7sKkfrnaJ"")
 }
 
 .logo {
