--- a/cvo-style.css
+++ b/cvo-style.css
@@ -138,7 +138,7 @@ cursor:default;
  left: 350px;
  top: 0px;
 
- background: url("https://drive.google.com/uc?export=view&id=1leNXAR3s6JMKU2LhzoOsfec7sKkfrnaJ"")
+ background: url("https://drive.google.com/uc?export=view&id=1leNXAR3s6JMKU2LhzoOsfec7sKkfrnaJ")
 }
 
 .logo {
