--- a/style-arifin.css
+++ b/style-arifin.css
@@ -134,7 +134,7 @@ cursor:default;
  left: 350px;
  top: 0px;
 
- background: url("C:/Users/Asus/Documents/webdevelopment/figma/cvo/arifin-muhammad2.jpeg")
+ background: url("https://drive.google.com/uc?export=view&id=1wgH7g2CdvoF75FZYCOT2lagVE5Kh15xH"")
 }
 
 .logo {
